add new livestream image endpoint
